force-app/main/default/objects/KARZAA_API__mdt/KARZAA_API__mdt.object-meta.xml
<CustomObject>
    <label>KARZAA API</label>
    <pluralLabel>KARZAA APIS</pluralLabel>
</CustomObject>