force-app/main/default/objects/KARZAA_API__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>