force-app/main/default/objects/KARZAA_API__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>250</length>
    <type>Text</type>
</CustomField>