force-app/main/default/objects/KARZAA_API__mdt/fields/KARZAA_Key__c.field-meta.xml
<CustomField>
    <fullName>KARZAA_Key__c</fullName>
    <label>KARZAA Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>