force-app/main/default/objects/KARZAA_API__mdt/listViews/KARZAA.listView-meta.xml
<ListView>
    <fullName>KARZAA</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>API_Name__c</columns>
    <columns>EndPoint__c</columns>
    <columns>Environment__c</columns>
    <columns>KARZAA_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>KARZAA</label>
    <language>en_US</language>
</ListView>